fix: code review 修复 — 15项安全问题/bug/设计改进
P0 (安全/数据正确性):
- CalculatorTools: 用 exp4j 替换 ScriptEngine，彻底杜绝代码注入
- UsageController: 修复 LIKE 前缀逻辑（删除错误的 .replace("%","_"))
- UsageServiceImpl: 用 TransactionTemplate 包裹 insert 操作

P1 (高优 bug):
- ChatRequest: mode 正则去掉 ?，不再允许空字符串
- ChatServiceImpl.chat(): 加 getResult() null 检查防 NPE
- ChatServiceImpl.doFinally: 移除不可达的 default 分支
- ChatClientRegistry: 补充并发语义文档注释
- ModelRegistryRefresher: 同名 modelId 加 warn 日志
- SandboxService: 虚线程+Semaphore 替代固定线程池

P2 (设计/最佳实践):
- TokenBucketLimiter: 用纳秒精度计算 refill
- ModelServiceImpl: 去掉硬编码 deepseek 降级，改为 warn+skip
- ConversationController: 分页参数加 @Min/@Max 校验
- ModelParamsController: 加 @Valid + ModelParamsDTO 校验注解
- SandboxService: redirectErrorStream=true 避免容器删除后 docker logs 失败
- ConversationIdUtil: 删除未使用的 stripUserPrefix 方法